renamed useCases to correct java syntax, remove autowireds and added contructor params